# ChangeLog for app-editors/amyedit
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/amyedit/ChangeLog,v 1.22 2008/11/22 15:10:19 maekke Exp $

  22 Nov 2008; Markus Meier <maekke@gentoo.org> amyedit-1.0-r1.ebuild:
  revert unwanted amd64 stabilisation

  22 Nov 2008; Markus Meier <maekke@gentoo.org> amyedit-1.0-r1.ebuild:
  x86 stable, bug #247018

  05 Oct 2008; Alexis Ballier <aballier@gentoo.org> amyedit-1.0-r1.ebuild:
  Add missing intltool dep for bug #239632

  30 Aug 2008; Alexis Ballier <aballier@gentoo.org>
  +files/amyedit-1.0-signal.patch, amyedit-1.0-r1.ebuild:
  Run eautoreconf after patching makefile.am instead of letting
  maintainer-mode do it, should fix bug #205984. Fix build with recent
  libsigc++ by Sven E. dark@verfeiert.org, bug #229801.

  16 Aug 2008; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove pclouds from metadata.xml (#49680)

  09 Jan 2008; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>
  amyedit-0.9.ebuild, amyedit-1.0.ebuild, amyedit-1.0-r1.ebuild:
  Added DEPEND dev-util/pkgconfig, #205033

*amyedit-1.0-r1 (07 Jan 2008)

  07 Jan 2008; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>
  +files/amyedit-1.0-keyfile.patch, +amyedit-1.0-r1.ebuild:
  Remove private Glib::KeyFile usage as >=glibmm-2.14 provides an alternative,
  #204624

  11 Oct 2007; Rémi Cardona <remi@gentoo.org> amyedit-0.9.ebuild,
  amyedit-1.0.ebuild:
  update gtksourceview deps (see bug #195366)

  12 Mar 2007; Alexandre Buisse <nattfodd@gentoo.org> metadata.xml:
  Replaced text-markup by tex as maintaining herd (text-markup split).

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  04 Dec 2006; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>
  -amyedit-0.8.ebuild:
  Removed old version

  22 Mar 2006; Scott Stoddard <deltacow@gentoo.org> amyedit-1.0.ebuild:
  Added ~amd64 wrt bug #126261.
