@@ -3,17 +3,14 @@ Hash: SHA1
 
 AUX amyedit-1.0-keyfile.patch 2123 RMD160 0b2a6411240e340b20ca487cdf751321732ede64 SHA1 93a443fc0935eb49f09464979bebc41b2eace74e SHA256 aef655d331cca213d85f6f939b70604511d7b891e33834390d250ed08b9c577a
 AUX amyedit-1.0-signal.patch 3142 RMD160 0abe18918cf571d03ded7acb0399bfbe9af3f922 SHA1 5f8093eed36af7e3475b773147d5a93373c43542 SHA256 34123b5d142f9141f49cd05fa0c31cf631d6d83fe5ad1d343ecd356aedbd83a6
-DIST amyedit-0.9.tar.bz2 246702 RMD160 5971ec3848cb1195ca4c147c4f4e2bca1e087bb7 SHA1 d073e6b01c047d1d1e09f8835c5da8b07c8ca25c SHA256 0051546f68d63e4a8f087a68dcfe29fbeeaf82727bed9f39045ffdf6b4b60949
 DIST amyedit-1.0.tar.bz2 297769 RMD160 b08ee643f2e6021e6ad7a3382c394106ea504298 SHA1 2ca1c7910b231e782596548622a51de96e1bd090 SHA256 9aa88340266827bd83715d495b7e1f2c1ca7100ff9f7586877c1b4d3ec67f228
-EBUILD amyedit-0.9.ebuild 606 RMD160 c020162a893c9e03b609c9376b0a59127c306052 SHA1 4a94afbd11301551b3e931eb397d134d0de0af62 SHA256 e4213ad1e52934b1f5fb1df1c475fb882e8c465f7ab2dd5b6e2314e8867515d6
 EBUILD amyedit-1.0-r1.ebuild 820 RMD160 aba749fea2c80b83e909d19f7c9e53d219d5db8b SHA1 23a90aeae60f7f55ff4716068ef7a907cfa2f8cb SHA256 7f2ddd2ffd2f4a8ca10f37a3452ffea6d928bc8d0f3e3b4a19f253a096ae2540
-EBUILD amyedit-1.0.ebuild 605 RMD160 96e7cbec9dfb499f9ea9c6daddb74cf50f80bccc SHA1 b4192dbbaa3fa08a9838076261f1e82bfbd026cc SHA256 53c6375d48da9720a0624dc0c93cb715bf8810b8005327a6f2bc31baafba0527
-MISC ChangeLog 2872 RMD160 f974a88b0dc87955bc1f8ef72988b0213a3ef40a SHA1 b9874c1e0b09ab5a680d837aaf5bd7efe49562e1 SHA256 f9f2cbbdb873641c33870591b651366a5880cac75c8bc4a43593755b10aeba66
+MISC ChangeLog 2984 RMD160 2f12b00d23ae4064786ccd868ed74e1df507ab2f SHA1 7d575311f06de3057be7de390fd56d49a22d028c SHA256 815f707a165e926833986991d9f32d9fc88ea96b93e051b590c18eb0a87a9888
 MISC metadata.xml 158 RMD160 bfa606b587a9accc212f1e81dbef51196e5a0744 SHA1 e2015772e89e37e6b9e1c4b66fc3c588437ef54a SHA256 13fb4255576ddeb318fb62817c06a115c1d7ea5c8b2f67db2c59a15fdb1cd95a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.9 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkkoIOUACgkQkKaRLQcq0GKRggCfZnvGJPdzhQvs7POzkgc+fc4G
-y34An37EDzyrhclzu2uBbttrIzh5EQND
-=rR9L
+iEYEARECAAYFAkwTZRcACgkQvFcC4BYPU0qGiwCfRIVby+EzKElRqOxvnj64bc9G
+AV0AoJ6X+5POuW5JEVl0weM5WI+GfsJt
+=FDZV
 -----END PGP SIGNATURE-----
