@@ -1,23 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/amyedit/Attic/amyedit-0.9.ebuild,v 1.9 2008/01/09 12:33:59 pclouds Exp $
-
-inherit eutils
-
-DESCRIPTION=" AmyEdit is a LaTeX editor"
-HOMEPAGE="http://amyedit.sf.net"
-SRC_URI="mirror://sourceforge/amyedit/${P}.tar.bz2"
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="~amd64 ~ppc x86"
-IUSE=""
-RDEPEND=">=dev-cpp/gtkmm-2.4.8
-	=x11-libs/gtksourceview-1*
-	app-text/aspell"
-DEPEND="${RDEPEND}
-	dev-util/pkgconfig"
-
-src_install() {
-	einstall
-	dodoc ChangeLog README TODO || die
-}
