@@ -1,6 +1,10 @@
 # ChangeLog for app-editors/amyedit
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/amyedit/ChangeLog,v 1.22 2008/11/22 15:10:19 maekke Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/amyedit/ChangeLog,v 1.23 2010/06/12 10:44:34 aballier Exp $
+
+  12 Jun 2010; Alexis Ballier <aballier@gentoo.org> -amyedit-0.9.ebuild,
+  -amyedit-1.0.ebuild:
+  remove old
 
   22 Nov 2008; Markus Meier <maekke@gentoo.org> amyedit-1.0-r1.ebuild:
   revert unwanted amd64 stabilisation
